--- a/.github/workflows/export-and-branch-solution.yml
+++ b/.github/workflows/export-and-branch-solution.yml
@@ -29,7 +29,7 @@ jobs:
         environment-url: 'https://org8e706053.crm.dynamics.com/'
         user-name: 'cs-ws-s-PP-Service@volvogroup.com'
         password-secret: ${{ secrets.password }}
-        solution-name: OAuth2_AuthorizationCode
+        solution-name: OAuth2AuthorizationCode
         solution-output-file: out/exported/ALMLab.zip
 
     - name: unpack-solution action
